<resources>

    <string name="app_name">ECG-Analyzer</string>
    <string name="Descript_photo_cover">cover</string>
    <string name="example">Example</string>
    <string name="takePhoto">Take Photo</string>
    <string name="searchPhoto">Search Photo</string>
    <string name="sett">Settings</string>
    <string name="Nulo"></string>
    <string name="howTo">How to</string>
    <string name="About">About</string>
    <string name="AboutText">Universidad Rey Juan Carlos\nTFG: Aplicación para Obtención de Señal Cardíaca desde Imagen Digital de ECG\nTutora: Inmaculada Mora\nAuthor: Adrián Pizarro</string>
    <string name="HowToText">1-Coloca el ECG sobre una superficie plana.\n2-Pulsa en Take Photo para activar la cámara.\n3-Coloca el movil en paralelo al ECG a una distancia de unos 20cm.\n4-Toca la pantalla para echar la foto y comenzar a obtener la señal cardiaca.</string>
    <string name="Grid">Grid Photo</string>

    <string name="CantOpen">Can not open the folder</string>
    <string name="OptionsMenuFMC">Options</string>
    <string name="OptionsMenuFMAnalyze">Analyze</string>
    <string name="OptionsMenuFMCrop">Crop</string>
    <string name="OptionsMenuFMRotate">Rotate</string>
    <string name="OptionsMenuFMView">View</string>
    <string name="OptionsMenuFMEraseM">Erase Marks</string>
    <string name="OptionsMenuFMCancel">Cancel</string>
    <string name="OptionsMenuFMDelete">Delete</string>
    <string name="OptionsMenuFMDeleteAll">Delete All</string>
    <string name="OptionsMenuFMRen">Rename</string>

    <string name="LongCLick">Long click to see options</string>
    <string name="PhotoSaved">Photo saved, touch options</string>
    <string name="PhotoDisc">Photo deleted</string>
    <string name="PhotoRen">Photo renamed and saved: /mnt/sdcard/ECG-Analyzer</string>
    <string name="SavedPref">Saved</string>

    <string name="ChooseOp">Choose one:</string>
    <string name="PhotoRenFail">Invalid extension(.jpg .png)</string>
    <string name="MustHoriz">Must be horizontal to the floor (green)</string>

    <string name="SetTitle">Image Settings</string>
    <string name="SetFormTitle">Format</string>
    <string name="SetFormSum">Select the image format</string>
    <string name="SetCalTitle">Size</string>
    <string name="SetCalSum">Select the image size</string>
    <string name="SetCompTitle">Compress</string>
    <string name="SetCompSum">Select the compression level</string>
    <string name="SetFlashTitle">Flash</string>
    <string name="SetFlashSum">Turn on/off flash</string>

    <string name="Continue">Continue</string>
    <string name="Log">Log</string>
    <string name="Optimal">Optimal</string>

    <string name="TenS">10 s</string>
    <string name="veinticincoS">25 mm/s</string>
    <string name="CincuentaS">50 mm/s</string>
    <string name="milisV">  mm/mV</string>
    <string name="ten"> 10</string>
    <string name="four"> 4</string>
    <string name="h">h</string>
    <string name="v">v</string>

    <string name="TotalTime">Total Time:</string>
    <string name="VelocPaper">Paper Veloc:</string>
    <string name="VoltageMeasure">Voltage:</string>
    <string name="MustIntro">Please intro a Voltage Measure</string>
    <string name="NotInRangeVolt">Voltage Measure must be between 5 and 20</string>

    <string name="picture">Picture</string>
    <string name="request_permission">This application needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

    <string-array name="grid_array">
        <item>10mm</item>
        <item>5mm</item>
        <item>1mm</item>
    </string-array>

    <string-array name="line_array">
        <item>1mm</item>
        <item>2mm</item>
        <item>3mm</item>
        <item>4mm</item>
        <item>5mm</item>
        <item>6mm</item>
        <item>7mm</item>
        <item>8mm</item>
        <item>9mm</item>
        <item>10mm</item>
    </string-array>

    <string-array name="color_array">
        <item>Green</item>
        <item>Blue</item>
        <item>Red</item>
        <item>Cyan</item>
        <item>Magenta</item>
        <item>White</item>
    </string-array>

    <string name="texSpinner">Grid Square Size:</string>
    <string name="textcropbutton">Crop</string>
    <string name="textrotbutton">Rotate</string>

    <string name="photoCropped">Photo has been cropped and saved</string>
    <string name="working">Working...</string>proccesOrnot
    <string name="proccesOrnot">Would you like to Rotate the image?</string>
    <string name="cropOrnot">Would you like to Crop the image?</string>
    <string name="rotated">Image Rotated!</string>
    <string name="proccesOrnotYes">Yes!</string>
    <string name="proccesOrnotLater">Later</string>
    <string name="proccesOrnotTitle">Image captured!</string>

    <string name="proccesOrnotTitleDer">Image cropped!</string>
    <string name="proccesOrnotDer">Would you like to erase marks?</string>

    <string name="grid">Use Grid</string>
    <string name="both">Both</string>
    <string name="direction">Direction</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="gridSizeOp">Grid Size</string>
    <string name="lineSzSizeOp">Lines-Width</string>
    <string name="texterasebutton">Save</string>
    <string name="textUndoButton">Undo</string>textSwitchMove

    <string name="textSwitchMove">Move</string>
    <string name="textSwitchDraw">Draw</string>
    <string name="rescale">Rescale</string>
    <string name="OptionsMenuFMUpload">Upload</string>

    <string name="uploading">Uploading...</string>
    <string name="doneUpload">File was succesfully uploaded</string>
    <string name="errorUpload">Error: File was unsuccesfully uploaded</string>
</resources>