<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="preferencias_principal" >

    <PreferenceCategory android:title="@string/SetTitle" >
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/tiposFormat"
            android:entryValues="@array/tiposFormatValues"
            android:key="typeFormat"
            android:summary="@string/SetFormSum"
            android:title="@string/SetFormTitle" />
        <ListPreference
            android:key="typeCal"
            android:summary="@string/SetCalSum"
            android:title="@string/SetCalTitle" />
        <ListPreference
            android:defaultValue="8"
            android:entries="@array/tiposCompress"
            android:entryValues="@array/tiposCompressValues"
            android:key="typeComp"
            android:summary="@string/SetCompSum"
            android:title="@string/SetCompTitle" />
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/tiposFlash"
            android:entryValues="@array/tiposFlashValues"
            android:key="setFlash"
            android:summary="@string/SetFlashSum"
            android:title="@string/SetFlashTitle" />
    </PreferenceCategory>
</PreferenceScreen>