<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/TotalTime"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/TenS"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/VelocPaper"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:id="@+id/radioGroup"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/veinticincoS"
            android:id="@+id/radioButton" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CincuentaS"
            android:id="@+id/radioButton2" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/VoltageMeasure"
        android:id="@+id/textView4"
        android:layout_below="@+id/radioGroup"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="70sp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:hint="@string/ten"
        android:gravity="end"
        android:id="@+id/editText"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/milisV"
        android:id="@+id/textView5"
        android:layout_margin="10dp"
        android:layout_marginBottom="10dp"
        android:layout_alignBottom="@+id/editText"
        android:layout_toRightOf="@+id/editText"
        android:layout_toEndOf="@+id/editText" />

    <RelativeLayout
        android:id="@+id/linearLinesAdjust"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:background="@drawable/gridop_foto_border_green"
        android:padding="4dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/direction"
                android:id="@+id/textViewDirection"
                android:textStyle="bold"
                android:textColor="#000000" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioGroupLines">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/horizontal"
                    android:id="@+id/radioButtonHoriz" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vertical"
                    android:id="@+id/radioButtonVert" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/both"
                    android:id="@+id/radioButtonBoth" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grid"
                    android:id="@+id/radioButtonGrid" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lineSzSizeOp"
                android:layout_marginStart="20dp"
                android:id="@+id/textView7"
                android:textStyle="bold"
                android:textColor="#000000" />

            <Spinner
                android:id="@+id/lineWidth_spinner"
                android:layout_width="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="70sp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:hint="@string/four"
                    android:gravity="end"
                    android:id="@+id/editTextHoriz"
                    android:layout_marginStart="25dp"
                    android:layout_below="@+id/textView4"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/h"
                    android:id="@+id/textView9"
                    android:layout_margin="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_alignBottom="@+id/editTextHoriz"
                    android:layout_toRightOf="@+id/editTextHoriz"
                    android:layout_toEndOf="@+id/editTextHoriz" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="70sp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:hint="@string/ten"
                    android:gravity="end"
                    android:id="@+id/editTextVert"
                    android:layout_marginStart="25dp"
                    android:layout_below="@+id/textView4"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/v"
                    android:id="@+id/textView10"
                    android:layout_margin="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_alignBottom="@+id/editTextHoriz"
                    android:layout_toRightOf="@+id/editTextHoriz"
                    android:layout_toEndOf="@+id/editTextHoriz" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/gridSizeOp"
                android:id="@+id/textView6"
                android:textStyle="bold"
                android:textColor="#000000" />

            <Spinner
                android:id="@+id/grid_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </RelativeLayout>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/Continue"
        android:onClick="continueGrid"
        android:textColor="#ffffff"
        android:id="@+id/button"
        android:background="@drawable/mybutton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/linearLinesAdjust" />

</RelativeLayout>